@@ -118,28 +118,12 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-  *) ab: Keep reading nonblocking to exhaust TCP or SSL buffers when previous
-     read was incomplete.  PR 61301
-     trunk patch: https://svn.apache.org/r1811649
-     2.4.x patch: trunk works modulo CHANGES
-                  svn merge -c 1811649 ^/httpd/httpd/trunk .
-     +1: elukey, icing, ylavic
-
   *) core, mod_rewrite: introduce the 'keeps-redirect-vary' note in the internal redirect
                         workflow to keep the Vary headers set by RewriteCond/Rule
                         directives combinations in the directory context. PR: 58231
      trunk patch: https://svn.apache.org/r1811744
      2.4.x: svn merge -c 1811744 ^/httpd/httpd/trunk .
      +1: elukey, icing, ylavic
-
-  *) ab: Make the TLS layer aware that the underlying socket is nonblocking,
-     and use/handle POLLOUT where needed to avoid busy IOs and recover write
-     errors when appropriate.
-     trunk patch: http://svn.apache.org/r1811664
-                  http://svn.apache.org/r1814118
-     2.4.x patch: trunk works (modulo CHANGES)
-                  svn merge -c 1811664,1814118 ^/httpd/httpd/trunk .
-     +1: ylavic, jim, icing
 
 
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
